EPMRPP-118946 || Regenerate jooq model for launch attributes and stats